fixing formatting and adding render.com URL
